<resources>
    <string name="app_name">flyRTC</string>
    <string name="app_sr">flySR</string>
    <string name="app_can">flyCAN</string>

    <string name="login_admin">手机号或邮箱</string>
    <string name="login_pwd">密码</string>
    <string name="login_admin_nor">119140589@qq.com</string>
    <string name="login_pwd_nor">kc123456</string>
    <string name="login_login">登录</string>
    <string name="login_ok">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_progress">正在获取账号,请稍等</string>
    <string name="login_client_progress">账号登录中,请稍等</string>
    <string name="login_select">请选择体验账号</string>
    <string name="login_client">OK,立即体验</string>
    <string name="login_client_line">该号码已经上线</string>
    <string name="login_out">账号已退出</string>
    <string name="login_out_1">登录账号已过期，请从新选择账号登录</string>
    <string name="login_out_2">该账号已经被人登录</string>
    <string name="login_out_3">该账号已经被人登录，你被强制下线</string>

    <string name="videe_net">网络断开请等待重连</string>

    <string name="ability_video">视频</string>
    <string name="ability_video_set">Codec</string>
    <string name="ability_video_codec">Codec Setting</string>
    <string name="ability_video_setting">设置</string>
    <string name="ability_video_set1">Video Codec</string>
    <string name="ability_video_set2">Audio Codec</string>

    <string name="sdk_version">SDK_VERSION:</string>
    <string name="demo_version">DEMO_VERSION:</string>

    <string name="video_ctrl_1">静音</string>
    <string name="video_ctrl_2">切语音</string>
    <string name="video_ctrl_3">扬声器</string>
    <string name="video_ctrl_4">切换摄像头</string>
    <string name="video_ctrl_5">切到语音</string>

</resources>
