<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#f5f5f5"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_weight="3"
        android:background="#f5f5f5"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dip"
                android:background="@mipmap/login_admin" />

            <EditText
                android:id="@+id/login_admin"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:layout_marginStart="10dip"
                android:background="@null"
                android:hint="@string/login_admin"
                android:inputType="textNoSuggestions"
                android:text="@string/login_admin_nor"
                android:textColor="#7f7f7f" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="#cdcdcd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dip"
                android:background="@mipmap/login_pwd" />

            <EditText
                android:id="@+id/login_pwd"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:layout_marginStart="10dip"
                android:background="@null"
                android:hint="@string/login_pwd"
                android:inputType="textPassword"
                android:text="@string/login_pwd_nor"
                android:textColor="#7f7f7f" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:layout_weight="3"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@drawable/login_login"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/login_login"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dip"
        android:layout_weight="2"
        android:gravity="center" >
    </LinearLayout>

    <TextView
        android:id="@+id/package_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dip"
        android:clickable="false"
        android:gravity="center"
        android:textColor="#989898"
        android:textSize="16sp" />

</LinearLayout>