<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <RelativeLayout
        android:id="@+id/remotelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </RelativeLayout>

    <TextView
        android:id="@+id/video_call_tips"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:layout_marginTop="80dp"
        android:text=""
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/video_call_client"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/video_call_status"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/video_call_client"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/video_layout_4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:focusable="false"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/video_call_hangup2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/converse_call_hangup" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_layout_3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/video_layout_4"
        android:focusable="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/video_call_mute"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@mipmap/converse_mute"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/video_call_mute_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/video_ctrl_1"
                android:textColor="#ffffff"
                android:textSize="12sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/video_call_video"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@mipmap/converse_video"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/video_call_video_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/video_ctrl_2"
                android:textColor="#ffffff"
                android:textSize="12sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/video_call_speaker"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:background="@mipmap/converse_speaker" />

            <TextView
                android:id="@+id/video_call_speaker_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/video_ctrl_3"
                android:textColor="#ffffff"
                android:textSize="12sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/video_camera_switch"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:background="@mipmap/converse_switch" />

            <TextView
                android:id="@+id/video_camera_switch_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/video_ctrl_4"
                android:textColor="#ffffff"
                android:textSize="12sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_layout_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/video_layout_3"
        android:focusable="false"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/video_call_status2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_layout_1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/video_layout_2"
        android:focusable="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/video_call_video2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:background="@mipmap/converse_video"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/video_call_video_text2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/video_ctrl_5"
                android:textColor="#ffffff"
                android:textSize="12sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_layout_0"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/video_layout_1"
        android:focusable="false"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/video_call_hangup"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/converse_call_hangup" />

        <ImageButton
            android:id="@+id/video_call_answer"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/converse_call_answer" />
    </LinearLayout>
</RelativeLayout>