<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:id="@+id/audio_layout_1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:focusable="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/audio_call_mute"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:background="@mipmap/converse_mute"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/Audio_call_mute_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/video_ctrl_1"
                android:textColor="#ffffff"
                android:textSize="12sp">
            </TextView>
        </LinearLayout>

        <ImageButton
            android:id="@+id/audio_call_hangup"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:background="@drawable/converse_call_hangup"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/audio_call_speaker"
                android:layout_width="44dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@mipmap/converse_speaker"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/audio_call_speaker_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/video_ctrl_3"
                android:textColor="#ffffff"
                android:textSize="12sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/audio_layout_2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/audio_layout_1"
        android:layout_marginBottom="150dp"
        android:focusable="false"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/audio_call_status"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/audio_layout_3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/audio_layout_2"
        android:focusable="false"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/audio_call_client"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/audio_call_title"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/audio_layout_3"
        android:background="@mipmap/audio_title"
        android:contentDescription="@string/app_name" />

</RelativeLayout>